--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Web Star| Innovative Source of Information</title>
   </head>
   <body>
-
+google-site-verification: google249408ce4602b208.html
 <table>
   <tr>
     <td><img src="https://thumbs.dreamstime.com/b/golden-star-glitter-texture-isolated-white-background-christmas-decoration-golden-star-glitter-texture-isolated-135772527.jpg"alt=""width="80"height="80"title="Web Star"></td>
